manifests/production/cloudflare-gateway/Namespace-cloudflare-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: cloudflare-kubernetes-gateway
    control-plane: controller-manager
    pod-security.kubernetes.io/enforce: baseline
  name: cloudflare-gateway
