manifests/production/cloudflare-gateway/default_gateway.networking.k8s.io_v1_gatewayclass_cloudflare.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cloudflare
spec:
  controllerName: github.com/pl4nty/cloudflare-kubernetes-gateway
  parametersRef:
    group: ""
    kind: Secret
    name: cloudflare
    namespace: cloudflare-gateway
